[web-animations] animation events do not get fired if relevant event listeners are added dynamically after they are enqueued https://bugs.webkit.org/show_bug.cgi?id=290772

Reviewed by Ryosuke Niwa.

Dispatching animation events is asynchronous. The relevant steps of the "update animations and send
events" procedure [0] for events are:

1. advance the current time of an animation and enqueue animation events (if any),
2. perform a microtask checkpoint,
3. dispatch any queued animation events.

For instance, in the case of an animation that naturally advances to its finished state, a `finish`
event would be enqueued in step 1, then the `finished` promise would yield JS code execution in step
2, and finally the `finish` event enqueued in step 1 would be dispatched in step 3.

As part of 262123@main, and subsequent similar commits, we made it so that we only enqueue events
related to animations if a relevant event listener is currently registered. However, in the case
where an animation event listener is added after that event should have been enqueued, for instance
during step 2 above, then the animation event would not be dispatched.

We now remove such checks and add an additional subtest to the WPT test devoted to testing the finishing
behavior of Web Animations in `web-animations/timing-model/animations/finishing-an-animation.html`.

Addressing this also brought to a light an issue in a Scroll-driven Animations WPT where we expected
that a `finished` promise resolving meant any pending `finish` event would have been dispatched. We
fix this test to wait another frame before making this assumption. That test passed in both Safari
and Chrome due to both browsers suffering from the issue being fixed here. A Chromium bug was filed [1].

Finally, this surfaced an issue in the WPT test `scroll-animations/css/view-timeline-animation.html`
that was previously hidden because we did not enqueue `cancel` events during teardown of the test.
We ended up in a case where we hit `ASSERT_IMPLIES(data.startTime, data.timelineTime)` in
`AnimationEffectTiming::getBasicTiming()` because while that animation had a cached start time,
its timeline failed to resolve a current time because there was no style information available
to compute the writing mode. We address this by falling back to the initial values provided by
`RenderStyle` and making `ScrollTimeline::resolvedScrollDirection()` no longer return an optional
value.

[0] https://drafts.csswg.org/web-animations-1/#update-animations-and-send-events
[1] https://issues.chromium.org/issues/407497938

* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/scroll-animation.html:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/timing-model/animations/finishing-an-animation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/timing-model/animations/finishing-an-animation.html:
* Source/WebCore/animation/DocumentTimeline.cpp:
(WebCore::DocumentTimeline::removeReplacedAnimations):
* Source/WebCore/animation/ScrollTimeline.cpp:
(WebCore::ScrollTimeline::resolvedScrollDirection const):
(WebCore::ScrollTimeline::cacheCurrentTime):
(WebCore::ScrollTimeline::currentTime):
* Source/WebCore/animation/ScrollTimeline.h:
* Source/WebCore/animation/StyleOriginatedAnimation.cpp:
(WebCore::StyleOriginatedAnimation::tick):
(WebCore::StyleOriginatedAnimation::invalidateDOMEvents):
(WebCore::StyleOriginatedAnimation::shouldFireDOMEvents const): Deleted.
* Source/WebCore/animation/StyleOriginatedAnimation.h:
* Source/WebCore/animation/ViewTimeline.cpp:
(WebCore::ViewTimeline::cacheCurrentTime):
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::cancel):
(WebCore::WebAnimation::enqueueAnimationEvent):
(WebCore::WebAnimation::finishNotificationSteps):
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::addListenerTypeIfNeeded):
* Source/WebCore/dom/Document.h:
* Source/WebCore/dom/EventNames.json:

Canonical link: https://commits.webkit.org/293217@main